changed fonts and fixed alignment

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,15 @@
 
 }
 
+.form-second-title{
+  color: #000;
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
 .form-button{
     color: #FFF;
     font-family: Poppins;
